<resources>
    <string name="app_name">Attendance</string>
    <string name="registration">Registration</string>
    <string name="conform_password">Conform Password</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="employ_id">Employ ID</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="admin_id">Admin Id</string>
    <string name="admin">Admin</string>
    <string name="employee">Employee</string>
</resources>